006 - CBV para crear categorías.

--- a/templates/vil_app/index.html
+++ b/templates/vil_app/index.html
@@ -19,6 +19,9 @@
         <strong>No hay categorías.</strong>
       {% endif %}
     </div>
+    <h1>
+      <a href="/vil/categoria/add/">Add New Category</a>
+    </h1>
 
   </body>
 </html>
