007 - CBV para agregar páginas.

--- a/templates/vil_app/show_pages.html
+++ b/templates/vil_app/show_pages.html
@@ -17,6 +17,8 @@
         {% else %}
         <strong>No páginas en esta categoría.</strong>
         {% endif %}
+        <br>
+        <h3><a href="/vil/categoria/{{categorias.slug}}/add_page/">Add Page</a> </h3>
       {% else %}
         No existe esta categoría.
       {% endif %}
