--- a/templates/vil_app/category_form.html
+++ b/templates/vil_app/category_form.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Agregar una nueva categoría</title>
-  </head>
-  <body>
+{% extends 'vil_app/base.html' %}
+
+{% block title_block %}
+Nueva categoría
+{% endblock %}
+
+{% block body_block %}
     <form class="category_form" action="" method="post">
       {% csrf_token %}
       <table>
@@ -12,7 +12,4 @@
       </table>
       <input type="submit" name="submit" value="Crear categoría">
     </form>
-
-
-  </body>
-</html>
+{% endblock %}
