--- a/templates/vil_app/page_form.html
+++ b/templates/vil_app/page_form.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Agregar una nueva página</title>
-  </head>
-  <body>
-    <form class="page_form" action="" method="post">
-      {% csrf_token %}
-      <table>
-        {{ form.as_table}}
-      </table>
-      <input type="submit" name="submit" value="Crear página">
-    </form>
+{% extends 'vil_app/base.html' %}
 
+{% block title_block %}Nueva página {% endblock %}
 
-  </body>
-</html>
+{% block body_block %}
+<form class="page_form" action="" method="post">
+  {% csrf_token %}
+  <table>
+    {{ form.as_table}}
+  </table>
+  <input type="submit" name="submit" value="Crear página">
+</form>
+{% endblock %}
