011 - Autenticación, parte 2: crear usuarios y cambiar contraseña funcionando.

--- a/templates/vil_app/index.html
+++ b/templates/vil_app/index.html
@@ -1,6 +1,10 @@
 {% extends 'vil_app/base.html' %}
 {% block title_block %}
-Inicio {{ user.username }}
+  {% if user.is_authenticated  %}
+   Hola, {{ user.username }}
+  {% else %}
+  Inicio
+  {% endif %}
 {% endblock%}
 
 
