--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -12,7 +12,7 @@
 
     {{ form.as_p}}
 
-    <input type="submit" name="submit" value="Enviar link de confirmación">
+    <input type="submit" class="btn btn-default btn-lg" name="submit" value="Enviar link de confirmación">
   </form>
 
 {% endblock %}
