--- a/templates/vil_app/base.html
+++ b/templates/vil_app/base.html
@@ -28,7 +28,7 @@
         <li><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
         <li><a href="{% url 'vil_app:registrarse' %}">Sign Up</a></li>
-        <li><a href="{% url 'login' %}">Login</a></li>
+        <li><a href="{% url 'login' %}?next={{request.path}}">Login</a></li>
         {% endif %}
       </ul>
     </div>
