--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,23 +1,34 @@
 {% extends 'vil_app/base.html' %}
 {% load staticfiles %}
+{% load crispy_forms_tags %}
 {% block title_block %}
  Ingresar
 {% endblock %}
 
 {% block body_block %}
-<h1>Log in</h1>
+
 {% if user.is_authenticated %}
   <strong>Enhorabuena, ya estás logeado</strong>
   <a href="{% url 'vil_app:index' %}">HOME</a>
 {% else %}
-  <strong>Ingresar los datos correspondientes</strong>
-  <form class="" action="" method="post">
-    {% csrf_token %}
+  <div class="row justify-content-center mt-3">
+    <div class="col-6">
+      <div class="card">
+        <div class="card-body">
+          <h2>Log in</h2>
+          <form class="" action="" method="post" novalidate>
+            {% csrf_token %}
 
-    {{ form.as_p}}
+            {{ form|crispy}}
 
-    <input type="submit" name="submit" value="Yay!">
-  </form>
-  <p><a href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a></p>
+            <button type="submit" name="submit" value="Yay!" class="btn btn-primary">Ingresar</button>
+            <a href="{% url 'password_reset' %}" class="btn btn-link">¿Olvidaste tu contraseña?</a>
+          </form>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
 {% endif %}
 {% endblock %}
