--- a/templates/vil_app/base.html
+++ b/templates/vil_app/base.html
@@ -4,33 +4,95 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="{% static 'images/favicon.ico' %}">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/docs/4.2/examples/dashboard/dashboard.css" rel="stylesheet">
     <title>VIL | {% block title_block %} Very-important-links {% endblock %}</title>
   </head>
   <body>
-    <div class="">
-      {% block body_block %}
-      {% endblock %}
-    </div>
-    <div>
-      {% block sidebar_block %}
-          {% get_category_list categorias %}
-      {% endblock %}
+  <!-- navbar -->
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark p-1 mb-4">
+        <div class="container-fluid">
+          <a class="navbar-brand p-2" href="{% url 'vil_app:index' %}">VIL</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+              <ul class="navbar-nav mr-auto">
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'vil_app:index' %}">Inicio</a></li>
+                  {% if user.is_authenticated %}
+                  <!-- <li class="nav-item "><a class="nav-link" href="">Ver perfil</a></li> -->
+                  <li class="nav-item"><a class="nav-link" href="{% url 'vil_app:add_category' %}">Nueva categoría</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+
+                  {% else %}
+                  <li class="nav-item "><a class="nav-link" href="{% url 'login' %}?next={{request.path}}">Login</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{% url 'vil_app:registrarse' %}">Registrate aquí</a></li>
+                  {% endif %}
+              </ul>
+          </div>
+          {% if user.is_authenticated %}
+
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{ user.username }}
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                <!-- <a class="dropdown-item" href="">Perfil</a>
+                <a class="dropdown-item" href="">Agregar frase random</a> -->
+                <a class="dropdown-item" href="{% url 'password_change' %}">Cambiar contraseña</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'logout' %}">Salir</a>
+              </div>
+            </li>
+          </ul>
+          {% else %}
+            <form class="form-inline ml-auto">
+              <a href="{% url 'login' %}?next={{request.path}}" class="btn btn-outline-secondary">Log in</a>
+              <a href="{% url 'vil_app:registrarse' %}" class="btn btn-primary ml-2">Registrarse</a>
+            </form>
+          {% endif %}
+        </div>
+
+      </nav>
+    </header>
+
+<!-- sidebar -->
+    <div class="container-fluid">
+      <div class="row">
+        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+          <div class="sidebar-sticky">
+            {% block sidebar_block %}
+              {% get_category_list categorias %}
+            {% endblock %}
+          </div>
+        </nav>
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 mt-3">
+          {% block body_block %}
+          {% endblock %}
+        </main>
+      </div>
     </div>
 
-    <hr>
 
-    <div class="">
-      <ul>
-        <li><a href="{% url 'vil_app:index' %}">Inicio</a></li>
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'vil_app:add_category' %}">Nueva categoría</li></a>
-        <li><a href="{% url 'password_change' %}">Cambiar contraseña</li></a>
-        <li><a href="{% url 'logout' %}">Logout</a></li>
-        {% else %}
-        <li><a href="{% url 'vil_app:registrarse' %}">Sign Up</a></li>
-        <li><a href="{% url 'login' %}?next={{request.path}}">Login</a></li>
-        {% endif %}
-      </ul>
-    </div>
+
+
+
+    <!-- JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js">
+    </script>
+    <script src="https://getbootstrap.com/docs/4.2/examples/dashboard/dashboard.js">
+    </script>
   </body>
 </html>
