--- a/templates/vil_app/category_form.html
+++ b/templates/vil_app/category_form.html
@@ -1,15 +1,26 @@
 {% extends 'vil_app/base.html' %}
-
+{% load crispy_forms_tags %}
 {% block title_block %}
 Nueva categoría
 {% endblock %}
 
 {% block body_block %}
+<div class="jumbotron p-4">
+<div class="container">
+  <h1 class="jumbotron-heading">Nueva categoría</h1>
+  </div>
+</div>
+<div class="container">
+    <div class="row">
     <form class="category_form" action="" method="post">
       {% csrf_token %}
       <table>
-        {{ form.as_table}}
+        {{ form | crispy}}
       </table>
-      <input type="submit" name="submit" value="Crear categoría">
+      <button class="btn btn-primary" type="submit" name="submit">
+          Crear categoría.
+      </button>
     </form>
+  </div>
+</div>
 {% endblock %}
