--- a/templates/vil_app/page_form.html
+++ b/templates/vil_app/page_form.html
@@ -1,13 +1,26 @@
 {% extends 'vil_app/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title_block %}Nueva página {% endblock %}
 
 {% block body_block %}
-<form class="page_form" action="" method="post">
-  {% csrf_token %}
-  <table>
-    {{ form.as_table}}
-  </table>
-  <input type="submit" name="submit" value="Crear página">
-</form>
+<div class="jumbotron p-4">
+  <div class="container">
+  <h1 class="jumbotron-heading">Agregar nueva página </h1>
+  </div>
+</div>
+<div class="container">
+    <div class="row">
+      <form class="page_form" action="" method="post">
+        {% csrf_token %}
+        <table>
+          {{ form | crispy}}
+        </table>
+        <button class="btn btn-success" type="submit" name="submit">
+            Agregar página.
+        </button>
+        <div class="p-5"></div>
+      </form>
+    </div>
+</div>
 {% endblock %}
