016 - Search API (Funcionando)

--- a/templates/vil_app/base.html
+++ b/templates/vil_app/base.html
@@ -30,6 +30,7 @@
                   {% if user.is_authenticated %}
                   <!-- <li class="nav-item "><a class="nav-link" href="">Ver perfil</a></li> -->
                   <li class="nav-item"><a class="nav-link" href="{% url 'vil_app:add_category' %}">Nueva categoría</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{% url 'vil_app:search' %}">Buscador</a></li>
                   <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
 
                   {% else %}
