--- a/templates/vil_app/page_form.html
+++ b/templates/vil_app/page_form.html
@@ -10,17 +10,24 @@
   </div>
 </div>
 <div class="container">
-    <div class="row">
-      <form class="page_form" action="" method="post">
-        {% csrf_token %}
-        <table>
-          {{ form | crispy}}
-        </table>
-        <button class="btn btn-success" type="submit" name="submit">
-            Agregar página.
-        </button>
-        <div class="p-5"></div>
-      </form>
-    </div>
+  <div class="row">
+    <form class="page_form" action="" method="post" novalidate>
+      {% csrf_token %}
+      <table>
+        {{ form | crispy}}
+      </table>
+      <button class="btn btn-success" type="submit" name="submit">
+        Agregar página.
+      </button>
+      <div class="p-3"></div>
+    </form>
+
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <h3><a href="{% url 'vil_app:search'%}">Usar buscador</a> </h3>
+  </div>
 </div>
 {% endblock %}
