--- a/templates/vil_app/search.html
+++ b/templates/vil_app/search.html
@@ -26,7 +26,7 @@ Search
 <div>
   {% if result_list %}
   <br>
-  <h2>Resultados</h2>
+  <h2>Resultados: </h2>
   <br>
 
    <div class="list-group">
@@ -36,6 +36,7 @@ Search
           <a target="_blank" rel="noopener noreferrer" href="{{ result.link }}">
             {{ result.title|safe|escape }}
           </a>
+
         </h3>
         <p class="list-group-item-text">
           {{ result.summary|safe|escape }}
