--- a/templates/vil_app/show_pages.html
+++ b/templates/vil_app/show_pages.html
@@ -8,6 +8,7 @@
     {% block body_block %}
       {% if categorias %}
       <h1>{{ categorias.name }}</h1>
+      <div id="page-listing">
         {% if categorias.page_set.all %}
         <ul>
           {% for pagina in categorias.page_set.all reversed %}
@@ -15,12 +16,63 @@
           {% endfor %}
         </ul>
         {% else %}
-        <strong>No páginas en esta categoría.</strong>
+        <strong>No hay páginas en esta categoría.</strong>
         {% endif %}
+        </div>
+
+        {% if user.is_authenticated %}
         <br>
         <h3><a href="{% url 'vil_app:add_page' categorias.slug %}">Agregar una nueva página.</a> </h3>
         <br>
+        <h3>Usar buscador:</h3>
+        <br>
+        <div>
+          <div>
+            <div>
+              <form class="form-inline mt-3" id="user-form" method="post" action="">
+                {% csrf_token %}
 
+                <div class="form-group ">
+                  <input class="form-control" type="text" size="50" name="query" id="query" value="{{ query }}" />
+                </div>
+
+                <button class="btn btn-primary" type="submit" name="submit">Search</button>
+              </form>
+            </div>
+            <div>
+              {% if result_list %}
+              <br>
+              <h2>Resultados: </h2>
+              <br>
+
+               <div class="list-group">
+                {% for result in result_list %}
+                  <div class="list-group-item">
+                    <h3 class="list-group-item-heading">
+                      <a target="_blank" rel="noopener noreferrer" href="{{ result.link }}">
+                        {{ result.title|safe|escape }}
+                      </a>
+                      <button class="btn btn-info btn-sm vil-page-add"
+                              type="button"
+                              data-categoryid="{{ categorias.id }}"
+                              data-title="{{ result.title }}"
+                              data-url="{{ result.link }}">
+                          Agregar +
+                      </button>
+
+                    </h3>
+                    <p class="list-group-item-text">
+                      {{ result.summary|safe|escape }}
+                    </p>
+                  </div>
+                {% endfor %}
+               </div>
+              {% endif %}
+            </div>
+            {% endif %}
+          </div>
+
+        </div>
 
       {% else %}
         No existe esta categoría.
