019 - Agregado created_by a Page model. Cambios menores en el Login.

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -22,7 +22,7 @@
             {{ form|crispy}}
 
             <button type="submit" name="submit" value="Yay!" class="btn btn-primary">Ingresar</button>
-            <a href="{% url 'password_reset' %}" class="btn btn-link">¿Olvidaste tu contraseña?</a>
+            <!-- <a href="{% url 'password_reset' %}" class="btn btn-link">¿Olvidaste tu contraseña?</a> -->
           </form>
         </div>
 
