--- a/templates/vil_app/base.html
+++ b/templates/vil_app/base.html
@@ -36,8 +36,8 @@
                   <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
 
                   {% else %}
-                  <li class="nav-item "><a class="nav-link" href="{% url 'login' %}?next={{request.path}}">Login</a></li>
-                  <li class="nav-item"><a class="nav-link" href="{% url 'vil_app:registrarse' %}">Registrate aquí</a></li>
+                  <!-- <li class="nav-item "><a class="nav-link" href="{% url 'login' %}?next={{request.path}}">Login</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{% url 'vil_app:registrarse' %}">Registrate aquí</a></li> -->
                   {% endif %}
               </ul>
           </div>
