--- a/templates/vil_app/page_listing.html
+++ b/templates/vil_app/page_listing.html
@@ -1,7 +1,11 @@
 {% if pages %}
 <ul>
   {% for page in pages reversed %}
-  <li><a target="_blank" rel="noopener noreferrer" href="{{ page.url }}">{{ page.title }}</a></li>
+  <li class="list-group-item">
+    <a target="_blank" rel="noopener noreferrer" href="{{ page.url }}">{{ page.title }}</a>
+    <br>
+    <small> Agregado por {% if page.created_by %}{{ page.created_by.username }}{% else %}Anónimo{% endif %} el {{ page.fecha_agregado|date:"SHORT_DATE_FORMAT" }}</small>
+  </li>
   {% endfor %}
 </ul>
 {% else %}
