--- a/templates/vil_app/profile.html
+++ b/templates/vil_app/profile.html
@@ -7,7 +7,7 @@
 
 <div class="jumbotron p-4">
   <div class="container">
-    <h1 class="jumbotron-heading">{{selecteduser.username}}</h1>
+    <h1 class="jumbotron-heading">Perfil de {{selecteduser.username}}</h1>
   </div>
 </div>
 <div class="container">
