--- a/templates/vil_app/page_listing.html
+++ b/templates/vil_app/page_listing.html
@@ -9,5 +9,5 @@
   {% endfor %}
 </ul>
 {% else %}
-<strong>No hay páginas en esta categoría.</strong>
+<strong>No hay páginas en esta categoría. ¡Sé el primero en agregar una página!</strong>
 {% endif %}
