--- a/templates/vil_app/show_pages.html
+++ b/templates/vil_app/show_pages.html
@@ -25,7 +25,7 @@
               {% endfor %}
             </ul>
             {% else %}
-            <strong>No hay páginas en esta categoría.</strong>
+            <strong>No hay páginas en esta categoría. ¡Sé el primero en agregar una página!</strong>
             {% endif %}
           </p>
         </div>
