023 - CSS: iconos nuevos

--- a/templates/vil_app/index.html
+++ b/templates/vil_app/index.html
@@ -3,7 +3,7 @@
   {% if user.is_authenticated  %}
    Hola, {{ user.username }}
   {% else %}
-  Inicio
+  Very-important-links
   {% endif %}
 {% endblock%}
 
