--- a/templates/vil_app/base.html
+++ b/templates/vil_app/base.html
@@ -13,7 +13,7 @@
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.2/examples/dashboard/dashboard.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
+    <script src="https://kit.fontawesome.com/ecdd14e9fc.js" crossorigin="anonymous"></script>
     <title>VIL | {% block title_block %} Very-important-links {% endblock %}</title>
 
   </head>
