--- a/templates/vil_app/show_pages.html
+++ b/templates/vil_app/show_pages.html
@@ -12,7 +12,16 @@
       <div class="card mb-6">
         <div class="card-body">
           {% if categorias %}
-          <h3>{{ categorias.name }}</h3>
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <h3 class="card-title mb-0">{{ categorias.name }}</h3>
+            <div class="justify-content-end">
+            {% if user.is_authenticated %}
+            <a href="{% url 'vil_app:add_page' categorias.slug %}" title="Agregar una nueva página"><i class="far fa-plus-square fa-2x btn btn-light" ></i></a>
+            <a href="#buscador"><i class="fas fa-search-plus fa-2x btn btn-light" title="Usar buscador" ></i></a>
+            {% else %}
+            {% endif %}
+            </div>
+          </div>
           <p class="card-text">
             <ul class="list-group" id="page-listing">
               {% if categorias.page_set.all %}
@@ -32,11 +41,11 @@
       </div>
       {% if user.is_authenticated %}
       <br>
-      <button type="button" class="btn btn-default">
+      <!-- <button type="button" class="btn btn-default">
         <a class="btn btn-primary" href="{% url 'vil_app:add_page' categorias.slug %}">Agregar una nueva página.</a>
-      </button>
-      <br><br>
-      <h3>Usar buscador:</h3>
+      </button> -->
+
+      <h3 id="buscador mt-2">Usar buscador:</h3>
 
       <div>
         <div>
