024 - Add change password

--- a/templates/vil_app/index.html
+++ b/templates/vil_app/index.html
@@ -20,7 +20,7 @@
             {% if paginas %}
             <ul class="list-group">
               {% for page in paginas %}
-              <li class="list-group-item">
+              <li class="list-group-item list-group-item-action">
                 <a target="_blank" rel="noopener noreferrer" href="{{ page.url }}">{{ page.title }}</a>
                 <br>
                 <small> Agregado por {% if page.created_by %}{{ page.created_by.username }}{% else %}Anónimo{% endif %} el {{ page.fecha_agregado|date:"SHORT_DATE_FORMAT" }} en <span><a href="{% url 'vil_app:categoria' page.category.slug %}">{{ page.category}}</a></span></small>
